--- a/Front/src/tpl/campaign-edit-dialog.html
+++ b/Front/src/tpl/campaign-edit-dialog.html
@@ -9,7 +9,7 @@
 
         <form name="editForm" ng-submit="ctrl.save()" class="form-horizontal">
             <div class="form-group">
-                <label class="col-sm-3 control-label">Name：</label>
+                <label class="col-sm-3 control-label">Name<span class="star-icon">*</span>：</label>
                 <div class="col-sm-5">
                     <input type="text" name="name" class="form-control" ng-model="item.name" required>
                     <span style="color:red" ng-show="editForm.name.$dirty && editForm.name.$invalid">
@@ -18,17 +18,21 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">ImpressionPixelUrl：</label>
+                <label class="col-sm-3 control-label">CampaignlUrl：</label>
                 <div class="col-sm-5">
-                    <input type="url" name="impPixelUrl" class="form-control" ng-model="item.impPixelUrl">
-                    <span style="color:red" ng-show="editForm.impPixelUrl.$dirty && editForm.impPixelUrl.$invalid">
-                    <span ng-show="editForm.impPixelUrl.$error.required">ImpPixelUrl is required.</span>
-                    <span ng-show="editForm.impPixelUrl.$error.url">ImpPixelUrl must be a valid URL</span>
-                    </span>
+                    <input type="url" name="url" class="form-control" ng-model="item.url" ng-show="item.url">
+                    <label ng-show="!item.url">ID will be available after saving the campaign.</label>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">TrafficSource: </label>
+                <label class="col-sm-3 control-label">ImpressionPixelUrl：</label>
+                <div class="col-sm-5">
+                    <input type="url" name="impPixelUrl" class="form-control" ng-model="item.impPixelUrl" ng-show="item.impPixelUrl">
+                    <label ng-show="!item.impPixelUrl">ID will be available after saving the campaign.</label>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">TrafficSource<span class="star-icon">*</span>: </label>
                 <div class="col-sm-5">
                     <md-select class="cs-subform-select" name="trafficSource" ng-model="item.trafficSource" required>
                         <md-option value="{{ts}}" ng-repeat="ts in trafficSources">{{ts.name}}</md-option>
@@ -39,7 +43,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">Country: </label>
+                <label class="col-sm-3 control-label">Country<span class="star-icon">*</span>: </label>
                 <div class="col-sm-5">
                     <md-select class="cs-subform-select" name="country" ng-model="item.country" required>
                         <md-option value="{{country}}" ng-repeat="country in countries">{{country.name}}</md-option>
@@ -76,6 +80,22 @@
                 <div class="col-sm-5">
                     <span class="dollar-icon">$</span>
                     <input type="text" class="form-control dollar-input" ng-model="costModelValue" ng-value="$">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-3 control-label">Redirect Model：</label>
+                <div class="col-sm-5 campaign-radio">
+                    <label class="radio-inline">
+                        <input type="radio" ng-model="item.redirectMode" value="0">302
+                    </label>
+                    <label class="radio-inline">
+                        <input type="radio" ng-model="item.redirectMode" value="1">Meta refresh
+                    </label>
+                    <label class="radio-inline">
+                        <input type="radio" ng-model="item.redirectMode" value="2">Double meta refresh
+                    </label>
+                    </label>
                 </div>
             </div>
             <div class="form-group tag-items">
@@ -135,7 +155,6 @@
                     <label class="col-sm-3 control-label">Flow：</label>
                     <div class="col-sm-5">
                         <md-select class="cs-subform-select" ng-model="item.flow.id">
-                            <md-option value="0"></md-option>
                             <md-option value="{{flow.id}}" ng-repeat="flow in flows">{{flow.name}}</md-option>
                         </md-select>
                     </div>
