--- a/Front/src/tpl/offer-edit-dialog.html
+++ b/Front/src/tpl/offer-edit-dialog.html
@@ -41,10 +41,8 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Country<span class="star-icon">*</span>: </label>
                 <div class="col-sm-5">
-                    <md-select name="country" class="cs-subform-select" ng-model="item.country" required>
-                        <md-option value="1">American</md-option>
-                        <md-option value="2">Canada</md-option>
-                        <md-option value="3">China</md-option>
+                    <md-select class="cs-subform-select" name="country" ng-model="item.country" required>
+                        <md-option value="{{country}}" ng-repeat="country in countries">{{country.name}}</md-option>
                     </md-select>
                     <span style="color:red" ng-show="editForm.country.$dirty && editForm.country.$invalid">
                     <span ng-show="editForm.country.$error.required">Country is required.</span>
@@ -54,9 +52,8 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Affiliate network<span class="star-icon">*</span>: </label>
                 <div class="col-sm-5">
-                    <md-select name="AffiliateNetworkId" class="cs-subform-select" ng-model="item.AffiliateNetworkId" required>
-                        <md-option value="1">EffectMobi</md-option>
-                        <md-option value="2">hasoffer</md-option>
+                    <md-select name="AffiliateNetworkId" class="cs-subform-select" ng-model="item.affiliateNetwork" required>
+                        <md-option value="{{affiliate}}" ng-repeat="affiliate in affiliates">{{affiliate.name}}</md-option>
                     </md-select>
                     <span style="color:red" ng-show="editForm.AffiliateNetworkId.$dirty && editForm.AffiliateNetworkId.$invalid">
                     <span ng-show="editForm.AffiliateNetworkId.$error.required">AffiliateNetwork is required.</span>
@@ -66,10 +63,7 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Postback Url<span class="star-icon">*</span>：</label>
                 <div class="col-sm-5">
-                    <input type="text" name="postbackUrl" class="form-control" ng-model="item.postbackUrl" required>
-                    <span style="color:red" ng-show="editForm.postbackUrl.$dirty && editForm.postbackUrl.$invalid">
-                    <span ng-show="editForm.postbackUrl.$error.required">PostbackUrl is required.</span>
-                    </span>
+                    <input type="text" name="postbackUrl" class="form-control" ng-model="item.postbackUrl">
                 </div>
             </div>
             <div class="form-group">
