--- a/Front/src/tpl/campaign-edit-dialog.html
+++ b/Front/src/tpl/campaign-edit-dialog.html
@@ -35,7 +35,7 @@
                 <label class="col-sm-3 control-label">TrafficSource<span class="star-icon">*</span>: </label>
                 <div class="col-sm-5">
                     <md-select class="cs-subform-select" name="trafficSource" ng-model="item.trafficSource" required>
-                        <md-option value="{{ts}}" ng-repeat="ts in trafficSources">{{ts.name}}</md-option>
+                        <md-option value="{{ts}}" ng-repeat="ts in trafficSources" ng-selected="item.trafficSourceId==ts.id">{{ts.name}}</md-option>
                         <span style="color:red" ng-show="editForm.trafficSource.$dirty && editForm.trafficSource.$invalid">
                         <span ng-show="editForm.trafficSource.$error.required">TrafficSource is required.</span>
                         </span>
@@ -46,7 +46,7 @@
                 <label class="col-sm-3 control-label">Country<span class="star-icon">*</span>: </label>
                 <div class="col-sm-5">
                     <md-select class="cs-subform-select" name="country" ng-model="item.country" required>
-                        <md-option value="{{country}}" ng-repeat="country in countries">{{country.name}}</md-option>
+                        <md-option value="{{cou}}" ng-repeat="cou in countries" ng-selected="item.country==cou.alpha3Code">{{cou.name}}</md-option>
                     </md-select>
                     <span style="color:red" ng-show="editForm.country.$dirty && editForm.country.$invalid">
                     <span ng-show="editForm.country.$error.required">Country is required.</span>
@@ -75,8 +75,8 @@
                 </div>
             </div>
 
-            <div class="form-group CPC-Con" ng-show="typeRadio">
-                <label class="col-sm-3 control-label" ng-modle="radioTitle">{{radioTitle}}：</label>
+            <div class="form-group CPC-Con" ng-show="item.costModel==1 || item.costModel==2 || item.costModel==3">
+                <label class="col-sm-3 control-label">{{radioTitle}}：</label>
                 <div class="col-sm-5">
                     <span class="dollar-icon">$</span>
                     <input type="text" class="form-control dollar-input" ng-model="costModelValue" ng-value="$">
@@ -155,7 +155,7 @@
                     <label class="col-sm-3 control-label">Flow：</label>
                     <div class="col-sm-5">
                         <md-select class="cs-subform-select" ng-model="item.flow.id">
-                            <md-option value="{{flow.id}}" ng-repeat="flow in flows">{{flow.name}}</md-option>
+                            <md-option value="{{flow.id}}" ng-repeat="flow in flows" ng-selected="item.targetFlowId==flow.id">{{flow.name}}</md-option>
                         </md-select>
                     </div>
                 </div>
