--- a/Front/src/tpl/offer-edit-dialog.html
+++ b/Front/src/tpl/offer-edit-dialog.html
@@ -42,7 +42,7 @@
                 <label class="col-sm-3 control-label">Country<span class="star-icon">*</span>: </label>
                 <div class="col-sm-5">
                     <md-select class="cs-subform-select" name="country" ng-model="item.country" required>
-                        <md-option value="{{country}}" ng-repeat="country in countries">{{country.name}}</md-option>
+                        <md-option value="{{cou}}" ng-repeat="cou in countries" ng-selected="item.country==cou.alpha3Code">{{cou.name}}</md-option>
                     </md-select>
                     <span style="color:red" ng-show="editForm.country.$dirty && editForm.country.$invalid">
                     <span ng-show="editForm.country.$error.required">Country is required.</span>
