--- a/Front/src/tpl/trafficSource-edit-dialog.html
+++ b/Front/src/tpl/trafficSource-edit-dialog.html
@@ -1,7 +1,7 @@
 <md-dialog class="cs-edit-dialog" ng-cloak>
     <md-toolbar>
         <div class="md-toolbar-tools">
-            <h2 class="md-title">{{ctrl.title | translate}}</h2>
+            <h2 class="md-title">{{ctrl.title | translate}} - {{ctrl.titleType | translate}}</h2>
         </div>
     </md-toolbar>
 
@@ -54,7 +54,7 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Impression tracking：</label>
                 <div class="col-sm-5">
-                    <input type="checkbox" class="form-control" ng-model="item.impTracking">
+                    <input type="checkbox" class="form-control" ng-model="item.impTracking" ng-true-value="1" ng-false-value="0" ng-init="0">
                 </div>
             </div>
 
