--- a/Front/src/tpl/fraudFilter-edit-dialog.html
+++ b/Front/src/tpl/fraudFilter-edit-dialog.html
@@ -9,7 +9,7 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Rule Name<span class="star-icon">*</span>:</label>
                 <div class="col-sm-7">
-                    <input type="text" name="name" class="form-control" ng-model="item.name" required>
+                    <input type="text" name="name" class="form-control" ng-model="formData.name" required>
                     <span style="color:red" ng-show="editForm.name.$dirty && editForm.name.$invalid">
                         <span ng-show="editForm.name.$error.required">Name is required.</span>
                     </span>
@@ -18,34 +18,40 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Campaign<span class="star-icon">*</span>:</label>
                 <div class="col-sm-7">
-                    <selectize config='campaignFilter.config' options='campaignFilter.options' ng-model="item.campaigns" placeholder="Select some campaigns" required></selectize>
+                    <selectize config='campaignFilter.config' options='campaignFilter.options' ng-model="formData.campaigns" placeholder="Select some campaigns" required></selectize>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Dimension<span class="star-icon">*</span>:</label>
                 <div class="col-sm-7 my-select">
-                    <md-select aria-label="Dimension" class="cs-subform-select" ng-model="item.dimension">
-                        <md-option value="{{dimension}}" ng-repeat="dimension in dimensions track by $index">{{dimension}}</md-option>
+                    <md-select aria-label="Dimension" class="cs-subform-select" ng-model="formData.dimension">
+                        <md-option value="IP">IP</md-option>
                     </md-select>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Frequency<span class="star-icon">*</span>:</label>
                 <div class="col-sm-3">
-                    <input type="text" name="name" class="form-control" ng-model="item.name" required style="width: 99px;float: left;">
+                    <input type="text" name="frequency" class="form-control" ng-model="formData.timeSpan" required style="width: 99px;float: left;">
                     <span style="float: left; height: 32px; line-height: 32px; padding: 0 15px;">seconds（xxxx）</span>
-                    <span style="color:red" ng-show="editForm.name.$dirty && editForm.name.$invalid">
-                        <span ng-show="editForm.name.$error.required">Name is required.</span>
+                    <span style="color:red" ng-show="editForm.frequency.$dirty && editForm.frequency.$invalid">
+                        <span ng-show="editForm.frequency.$error.required">Frequency is required.</span>
                     </span>
                 </div>
             </div>
-            <div class="form-group">
-                <label class="col-sm-3 control-label">Conditions<span class="star-icon">*</span>:</label>
-                <div class="col-sm-7 my-select">
-                    <md-select aria-label="ConditionKey" class="cs-subform-select" ng-model="conditionArray[conArrIdx].key">
-                        <md-option value="{{con.key}}" ng-repeat="con in conditions" ng-disabled="conditionDisable(con, conArrIdx)">{{con.display}}</md-option>
+            <div class="form-group" ng-repeat="condition in conditions track by $index">
+                <label class="col-sm-3 control-label" ng-if="$index == 0">Conditions<span class="star-icon">*</span>:</label>
+                <div class="col-sm-7 my-select" ng-class="{'col-sm-offset-3': $index != 0}">
+                    <md-select class="cs-subform-select" ng-model="condition.key" style="width: 110px;">
+                        <md-option
+                          value="{{conditionFilter.key}}"
+                          ng-repeat="conditionFilter in conditionFilters"
+                          ng-disabled="conditionDisabled(condition.key, conditionFilter.key);"
+                        >
+                          {{conditionFilter.display}}
+                        </md-option>
                     </md-select>
-                    <md-select aria-label="ConditionOperand" class="cs-subform-select" ng-model="condition.operand">
+                    <md-select class="cs-subform-select" ng-model="condition.operand">
                         <md-option value=">">&gt;</md-option>
                         <md-option value="<">&lt;</md-option>
                     </md-select>
@@ -56,25 +62,7 @@
                     <i ng-click="deleteCondition(condition)" class="em-close" ng-if="$index > 0">x</i>
                 </div>
             </div>
-            <div class="form-group">
-                <div class="col-sm-7 col-sm-offset-3 my-select">
-                    <div class="clearfix">
-                      <md-select aria-label="ConditionKey" class="cs-subform-select" ng-model="conditionArray[conArrIdx].key">
-                        <md-option value="{{con.key}}" ng-repeat="con in conditions" ng-disabled="conditionDisable(con, conArrIdx)">{{con.display}}</md-option>
-                      </md-select>
-                      <md-select aria-label="ConditionOperand" class="cs-subform-select" ng-model="condition.operand">
-                        <md-option value=">">&gt;</md-option>
-                        <md-option value="<">&lt;</md-option>
-                      </md-select>
-                      <input type="text" name="conValue" class="cs-subform-select form-control" ng-model="condition.value" required style="width: auto;">
-                      <i ng-click="deleteCondition(condition)" class="em-close" style="float: left;">x</i>
-                    </div>
-                    <span style="color:red" ng-show="editForm.conValue.$dirty && editForm.conValue.$invalid">
-                      <span ng-show="editForm.conValue.$error.required">Value is required.</span>
-                    </span>
-                </div>
-            </div>
-            <div class="form-group">
+            <div class="form-group" ng-if="conditionFilters.length > conditions.length">
               <div class="col-sm-7 col-sm-offset-3"><em ng-click="addCondition()">+Add another</em></div>
             </div>
         </form>
