--- a/Front/src/tpl/fraudFilter.html
+++ b/Front/src/tpl/fraudFilter.html
@@ -83,13 +83,13 @@
           </div>
         </md-content>
       </md-tab>
-      <md-tab label="Logs" class="logs">
+      <md-tab label="Logs" class="logs" md-on-select="onLogTabSelected()">
         <md-content class="md-padding">
           <div class="cs-action-bar-bg">
               <div class="cs-action-bar clearfix">
                 <div class="left-con">
                   <div class="cs-subform-group">
-                    <md-select aria-label="select" class="cs-subform-select" ng-model="datetype" ng-change="logQueryChange()">
+                    <md-select aria-label="select" class="cs-subform-select" ng-model="datetype" ng-change="logQueryChange(datetype)">
                         <md-option value="1">Today</md-option>
                         <md-option value="2">Yesterday</md-option>
                         <md-option value="3">Last 7 days</md-option>
@@ -106,31 +106,31 @@
                   <div class="cs-subform-control" ng-show="datetype==0">
                     <label class="cs-subform-label date-title">{{'Date Range' | translate}}：</label>
                     <div class="cs-subform-control">
-                            <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="fromDate"
-                                    ng-max="toDate" is-open="ctrl.dpOpened.a" datepicker-options="dateOptions"
+                            <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="logQuery.from"
+                                    ng-max="logQuery.to" is-open="ctrl.dpOpened.a" datepicker-options="dateOptions"
                                     ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.a=true" type="button">
-                                {{fromDate | date: 'yyyy-MM-dd'}}<i class="icon-rl-02"></i>
+                                {{logQuery.from | date: 'yyyy-MM-dd'}}<i class="icon-rl-02"></i>
                             </button>
                           </div>
                           <label class="cs-subform-label">{{'toDate' | translate}}：</label>
                           <div class="cs-subform-control">
-                            <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="toDate"
-                                    ng-min="fromDate" is-open="ctrl.dpOpened.b" datepicker-options="dateOptions"
+                            <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="logQuery.to"
+                                    ng-min="logQuery.from" is-open="ctrl.dpOpened.b" datepicker-options="dateOptions"
                                     ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.b=true" type="button">
-                                {{toDate | date: 'yyyy-MM-dd'}}<i class="icon-rl-02"></i>
+                                {{logQuery.to | date: 'yyyy-MM-dd'}}<i class="icon-rl-02"></i>
                             </button>
                           </div>
                   </div>
                 </div>
                 <div class="right-select">
                   <div class="cs-subform-control search-con">
-                      <input type="text" class="cs-filter-input" ng-model="queryLog.searchFilter" placeholder="Search..." ng-change="logQueryChange()">
+                      <input type="text" class="cs-filter-input" ng-model="logQuery.filter" placeholder="Search...">
                   </div>
                 </div>
               </div>
               <div class="table-box">
                   <md-table-container class="repeater-container">
-                      <table md-table multiple md-progress="promise">
+                      <table md-table multiple md-progress="logPromise">
                         <thead md-head>
                           <tr md-row>
                             <th md-column>Time</th>
@@ -139,15 +139,12 @@
                           </tr>
                         </thead>
                         <tbody md-body>
-                          <tr ms-row ng-repeat="tr in loglist.logs">
-                            <td md-cell>{{tr.time}}</td>
-                            <td md-cell>{{tr.name}}</td>
+                          <tr ms-row ng-repeat="log in logs.logs">
+                            <td md-cell>{{log.time}}</td>
+                            <td md-cell>{{log.name}}</td>
                             <td md-cell>
-                              <a class="status-icon" ng-click="viewLogs(tr)">
+                              <a class="status-icon" ng-click="viewLogs(log)">
                                 <i class="icon-eye-open"></i>
-                                <md-tooltip md-direction="bottom">
-                                  View automate logs
-                                </md-tooltip>
                               </a>
                             </td>
                           </tr>
@@ -155,6 +152,14 @@
                       </table>
                   </md-table-container>
               </div>
+              <md-table-pagination
+                md-limit="logQuery.limit"
+                md-limit-options="[50, 100, 200, 500, 1000]"
+                md-page="logQuery.page"
+                md-total="{{logs.totalRows}}"
+                md-page-select
+              >
+              </md-table-pagination>
           </div>
         </md-content>
       </md-tab>
